# sor-lab-7-prisoners

./: Cargo.toml  README.md
.github/classroom/: autograding.json
src/: main.rs  simulation.rs
src/bots/: Nguyen_HanhNong.rs  alanreviews.rs  allie.rs  always_betray.rs  always_silence.rs  angelonfira.rs  detective.rs  fifty_fifty.rs  grim_trigger.rs  joss.rs  kjersey.rs  mod.rs  nguyen_hanh_nong.rs  williamdual.rs  zakuarbor.rs
