[package]
name = "sor-lab-7-mkii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24"
